# Libni

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
Libni/: CMakeLists.txt
Libni/headers/: library.h
Libni/src/: library.cpp
